# api-stack

./: .env.local  .env.prod  .gitignore  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.db.yml  docker-compose.yml  pyproject.toml  setup.py  uvproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py  router.py
app/api/v1/: router.py
app/api/v1/auth/: models.py  router.py  schemas.py  service.py
app/api/v1/endpoints/: items.py
app/api/v1/items/: models.py  router.py  schemas.py  service.py  utils.py
app/core/: cache.py  config.py  db.py  exceptions.py  logging.py  security.py
app/db/: base.py  base_class.py  factories.py  session.py
app/db/migrations/: env.py
app/models/: base.py  item.py
app/schemas/: schemas.py
app/services/: base.py  cache.py  item.py  minio.py  ratelimit.py  redis.py
app/utils/: ratelimit.py  storage.py
deployment/k8s/: api-deployment.yaml  api-service.yaml  caddy-configmap.yaml  caddy-deployment.yaml  caddy-pvc.yaml  caddy-service.yaml  configmap.yaml  ingress.yaml  minio-deployment.yaml  minio-pvc.yaml  minio-service.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  secrets.yaml
docker/api/: Dockerfile
docker/caddy/: Caddyfile
performance/: locustfile.py
scripts/: backup_db.py  create_dummy_data.py
