# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate with PostgreSQL, Redis, MinIO, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # Changed from file reference to string identifier
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "oracledb>=2.0.0",
    "pgvector>=0.2.5",
    "redis>=5.0.1",
    "hiredis>=2.2.3",
    "minio>=7.2.3",
    "fastapi-cache2>=0.2.1",
    "loguru>=0.7.2",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0.post1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=1.40.0",
    "celery>=5.3.6",
    "typer>=0.9.0",
]

# Added to specify which files to include in the package
[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "isort>=5.12.0",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "faker>=18.13.0",
    "locust>=2.20.1",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
select = ["E", "F", "B", "I", "N"]
ignore = []
line-length = 88
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "alembic",
    "venv",
    ".venv",
    ".env",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]